--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,11 @@
-/* styles.css */
-
 /* Define variables */
 :root {
   --primary-color: #1e32a4;
   --text-color: #fff;
   --link-background: #000;
+  --secondary-color: #333;
+  --tertiary-color: #666;
+  --border-color: #f0ebeb;
 }
 
 /* Styles */
@@ -12,22 +13,27 @@ body {
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
+  background-color: #f9f9f9;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 
 header, footer {
   background-color: var(--primary-color);
   color: var(--text-color);
   padding: 10px;
-  text-align: center; /* Center align text */
+  text-align: center;
 }
 
 nav ul {
   list-style: none;
   padding: 0;
+  display: flex;
+  justify-content: center;
 }
 
 nav ul li {
-  display: inline;
   margin-right: 20px;
 }
 
@@ -39,36 +45,75 @@ nav ul li a {
   border-radius: 5px;
 }
 
-nav ul {
-  margin-left: auto;
-}
-
 main {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   grid-gap: 20px;
   padding: 20px;
+  flex: 1;
 }
 
 section {
-  border: 1px solid #f0ebeb;
+  border: 1px solid var(--border-color);
   padding: 20px;
+  background-color: #fff;
 }
 
-footer {
+#about h2, #contact h2, #projects h2 {
+  font-size: 24px;
+  color: var(--secondary-color);
+}
+
+#about p, #contact p, #projects p {
+  font-size: 16px;
+  color: var(--tertiary-color);
+}
+
+#contact form {
+  width: 80%;
+  max-width: 600px;
+  margin: 0 auto;
+}
+
+#contact label {
+  display: block;
+  margin-bottom: 10px;
+  font-size: 16px;
+  color: var(--secondary-color);
+}
+
+#contact input[type="text"],
+#contact input[type="email"],
+#contact textarea {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 20px;
+  font-size: 16px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+#contact input[type="submit"] {
   background-color: var(--primary-color);
   color: var(--text-color);
-  padding: 10px;
-  text-align: center; /* Center align text */
-  position: fixed;
-  bottom: 0;
-  width: 100%;
+  padding: 10px 20px;
+  font-size: 16px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+#contact input[type="submit"]:hover {
+  background-color: #0d1e72;
 }
 
 @media screen and (max-width: 768px) {
-  header nav {
-    display: flex;
-    justify-content: center;
+  nav ul {
+    flex-direction: column;
+  }
+
+  nav ul li {
+    margin-bottom: 10px;
   }
 
   main {
